# async-batch-llm

./: .codexrc  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  BATCH_LLM_FEEDBACK.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  OPTIONAL_DEPENDENCIES.md  PACKAGE_REVIEW_2025_01_10.md  RATE_LIMIT_FIX_PLAN.md  README.md  data.json  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/: RELEASE_CHECKLIST_V0_20.md  dependabot.yml
API/: index.html
GEMINI_INTEGRATION/: index.html
MIGRATION_V0_10/: index.html
MIGRATION_V0_19/: index.html
MIGRATION_V0_20/: index.html
MIGRATION_V0_4/: index.html
OPENAI_INTEGRATION/: index.html
OPENROUTER_INTEGRATION/: index.html
archive/: index.html
assets/: benchmark-summary.json  benchmark-throughput.json
benchmarks/: benchmark_progress.py  index.html
bounded-work/: index.html
callable-integration/: index.html
choosing-your-limits/: index.html
comparison/: index.html
contributing/: index.html
docs/: API.md  GEMINI_INTEGRATION.md  IMPLEMENTATION_PLAN_V0_2.md  IMPLEMENTATION_PLAN_V0_3.md  IMPROVEMENT_PLAN.md  MIGRATION.md  MIGRATION_V0_10.md  MIGRATION_V0_19.md  MIGRATION_V0_2.md  MIGRATION_V0_20.md  MIGRATION_V0_3.md  MIGRATION_V0_4.md  OPENAI_INTEGRATION.md  OPENROUTER_INTEGRATION.md  benchmarks.md  bounded-work.md  callable-integration.md  choosing-your-limits.md  comparison.md  contributing.md  getting-started.md  guardrails.md  index.md  openai-high-throughput.md  production-checklist.md  release-notes-v0.20.md  results-and-artifacts.md  terminal-demo.md  testing.md  troubleshooting.md
examples/: README.md  __init__.py  bench_gzip_write.py  benchmark_worker_overhead.py  download_gsm8k.py  example.py  example_anthropic.py  example_batch_benchmark.py  example_callable_application.py  example_context_manager.py  example_deepseek.py  example_embeddings.py  example_gateway.py  example_gemini_direct.py  example_gemini_grounding.py  example_gemini_smart_retry.py  example_langchain.py  example_llm_strategies.py  example_model_escalation.py  example_openai.py  example_openrouter.py  example_production_resume.py  example_single_call.py  example_smart_model_escalation.py  generate_benchmark_charts.py  peek_outputs.py
getting-started/: index.html
guardrails/: index.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_227b7fe2e7ae88a8___init___py.html  z_227b7fe2e7ae88a8_artifacts_py.html  z_227b7fe2e7ae88a8_base_py.html  z_227b7fe2e7ae88a8_callable_strategy_py.html  z_227b7fe2e7ae88a8_factory_py.html  z_227b7fe2e7ae88a8_gateway_py.html  z_227b7fe2e7ae88a8_highlevel_py.html  z_227b7fe2e7ae88a8_llm_strategies_py.html  z_227b7fe2e7ae88a8_models_py.html  z_227b7fe2e7ae88a8_parallel_py.html  z_227b7fe2e7ae88a8_parsing_py.html  z_227b7fe2e7ae88a8_provider_output_py.html  z_227b7fe2e7ae88a8_serialization_py.html  z_227b7fe2e7ae88a8_single_py.html  z_227b7fe2e7ae88a8_streaming_py.html  z_227b7fe2e7ae88a8_token_extractor_py.html  z_3241b0a112256a0b___init___py.html  z_3241b0a112256a0b_base_py.html  z_3241b0a112256a0b_metrics_py.html  z_54860ed8f01e9c2b_capacity_py.html  z_54860ed8f01e9c2b_error_logging_py.html  z_54860ed8f01e9c2b_event_dispatcher_py.html  z_54860ed8f01e9c2b_executor_host_py.html  z_54860ed8f01e9c2b_guardrails_py.html  z_54860ed8f01e9c2b_item_executor_py.html  z_54860ed8f01e9c2b_rate_limit_coordinator_py.html  z_54860ed8f01e9c2b_strategy_lifecycle_py.html  z_6bb47a2fd62b1b96___init___py.html  z_6bb47a2fd62b1b96_base_py.html  z_6bb47a2fd62b1b96_metrics_py.html  z_6dfe0f5d1264a6ca___init___py.html  z_6dfe0f5d1264a6ca_base_py.html  z_75172e35a3fa1f88___init___py.html  z_75172e35a3fa1f88_errors_py.html  z_75172e35a3fa1f88_rate_limit_py.html  z_8b36c023d755bf41___init___py.html  (+20 more)
notebooks/: async_batch_llm_quickstart.ipynb
openai-high-throughput/: index.html
production-checklist/: index.html
release-notes-v0.20/: index.html
results-and-artifacts/: index.html
scripts/: check_branch_fresh.sh  generate_terminal_demo.py
search/: search_index.json
terminal-demo/: index.html
testing/: index.html
tests/: __init__.py  conftest.py  test_artifacts.py  test_attempt_timeout_rename.py  test_basic.py  test_batch_result_ergonomics.py  test_batch_summary.py  test_cache_auto_renew.py  test_cache_expiration_multiworker.py  test_cache_tag_matching.py  test_callable_application_example.py  test_callable_strategy.py  test_capacity_admission.py  test_capacity_validation.py  test_cleanup_errors.py  test_cleanup_on_prepare_failure.py  test_concurrency.py  test_concurrency_knob.py  test_concurrent_post_processing.py  test_correctness_fixes.py  test_doc_examples.py  test_edge_cases.py  test_error_classifier_autoselect.py  test_error_classifiers.py  test_error_logging.py  test_exception_propagation.py  test_factory.py  test_fd_limit_warning.py  test_gemini_api_versions.py  test_gemini_strategies.py  test_guardrails.py  test_highlevel_api.py  test_input_validation.py  test_integration.py  test_llm_strategies.py  test_metadata_extractors.py  test_metadata_passthrough.py  test_middleware_observers.py  test_openai_compatible.py  (+33 more)
(+98 files in other folders)
