[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batch-llm"
version = "0.5.0"
description = "Provider-agnostic framework for high-throughput LLM processing with async workers, automatic retries, rate limiting, and intelligent validation recovery."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Geoff Davis", email = "geoff@keksi.ai"}
]
keywords = [
    "LLM",
    "asyncio",
    "batch-processing",
    "AI",
    "orchestration",
    "pydantic",
    "gemini",
    "openai",
    "anthropic",
    "langchain",
    "parallel",
    "rate-limiting",
    "retry",
    "structured-output",
    "prompt-engineering"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent"
]

dependencies = [
    "aiolimiter>=1.2.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
pydantic-ai = [
    "pydantic-ai>=0.0.1",
]
gemini = [
    "google-genai>=1.46.0",
]
all = [
    "pydantic-ai>=0.0.1",
    "google-genai>=1.46.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pydantic-ai>=0.0.1",  # Required for tests
    "google-genai>=1.46.0",  # Required for Gemini tests
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/geoff-davis/batch-llm"
Documentation = "https://geoff-davis.github.io/batch-llm/"
Repository = "https://github.com/geoff-davis/batch-llm"
Issues = "https://github.com/geoff-davis/batch-llm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/batch_llm"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
    "/uv.lock",
    "/docs",
    "/examples",
]
exclude = [
    "/.github",
    "/.claude",
    "/.uv-cache",
    "/.ruff_cache",
    "/.mypy_cache",
    "/.pytest_cache",
    "/htmlcov",
    "/dist",
    "/build",
    "/node_modules",
    "/.venv",
    "/tests",
    "/docs/internal",
    "**/__pycache__",
    "**/*.pyc",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["batch_llm"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Allow unused ignores for optional dependencies

[[tool.mypy.overrides]]
module = "batch_llm.llm_strategies"
disable_error_code = ["override", "arg-type", "attr-defined", "assignment"]

[[tool.mypy.overrides]]
module = "batch_llm.base"
disable_error_code = ["assignment"]  # TypedDict default_factory limitation

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*", "!TestOutput"]  # Ignore TestOutput (Pydantic models)
markers = [
    "slow: marks tests as slow (deselected by default, run with -m slow)",
    "integration: marks tests as integration tests that require API keys (deselected by default)",
    "benchmark: marks tests as performance benchmarks (deselected by default)",
]
addopts = "-m 'not slow and not integration and not benchmark'"  # Skip slow, integration, and benchmark tests by default
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["src/batch_llm"]
omit = [
    "*/tests/*",
    "*/testing/*",
    "*/__pycache__/*",
]
branch = true
relative_files = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
